--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v55
       - name: Maven Build
-        run: mvn install
+        run: maven install
 
   Testing:
     runs-on: ubuntu-latest
