this time both the build as well as test will pass

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Code checkout
         uses: actions/checkout@v4
       - name: Maven Test
-        run: maven test
+        run: mvn test
       - name: Checkstyle Analysis
         run: mvn checkstyle:checkstyle
