--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ on:
   pull_request:
     branches:
       - main
-    
+  permissions:
+  contents: read
+
+
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -16,6 +19,17 @@ jobs:
         uses: actions/checkout@v5
       - name: Maven Build
         run: mvn install
+
+      - name: Upload Build Artifact (WAR)
+        uses: actions/upload-artifact@v4
+        with:
+         name: vprofile-app
+         path: target/*.war
+
+      - name: Modify if build fails
+        if: failure()
+        run: echo "Build failed! Please check the logs." 
+
 
   Testing:
     runs-on: ubuntu-latest
